--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/austinslatey/inputTaskList/issues"
   },
-  "homepage": "https://github.com/austinslatey/inputTaskList#readme"
+  "homepage": "https://github.com/austinslatey/inputTaskList#readme",
+  "dependencies": {
+    "json2csv": "^6.0.0-alpha.2",
+    "prompt": "^1.3.0"
+  }
 }
